--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
+#Local
 PORT=4000
+#DATABASE_URL=postgres://postgres:@gL21384@localhost:5432/surveys_b5tp
 
-DB_USER=postgres
-DB_PASSWORD=@gL21384
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=surveys
+#Render
+DATABASE_URL=postgresql://renderuse:Yw8A4smVxfIDVfNXBew0zXAGLNLKm3UN@dpg-d4ti2o6mcj7s739rocj0-a.ohio-postgres.render.com/surveys_b5tp
+#NODE_ENV=production
+
